tests/baselines/reference/functionCall8.errors.txt
==== tests/cases/compiler/functionCall8.ts (2 errors) ====
    function foo(a?:string){}
    foo('foo'); 
    foo('foo', 'bar'); 
    ~~~~~~~~~~~~~~~~~
!!! error TS2346: Supplied parameters do not match any signature of call target.
    foo(4);
        ~
!!! error TS2345: Argument of type 'number' is not assignable to parameter of type 'string'.
    foo();
    